--- a/fetch_data_and_clean.ipynb
+++ b/fetch_data_and_clean.ipynb
@@ -62,7 +62,7 @@
     "prices = prices[prices[\"recordType\"] == \"MAIN PRICE SUMMARY\"]\n",
     "prices = prices[[\"local_datetime\", \"value\"]]\n",
     "\n",
-    "prices.to_excel(\"prices_filtered.xlsx\")\n",
+    "prices.to_excel(\"data/prices_filtered.xlsx\")\n",
     "\n",
     "prices[\"local_datetime\"] = pd.to_datetime(prices[\"local_datetime\"])\n",
     "prices[\"hour\"]= prices[\"local_datetime\"].apply(lambda x: x.hour)\n",
@@ -70,7 +70,7 @@
     "print(a)\n",
     "a.to_excel(\"average energy price from august to november14.xlsx\")\n",
     "\n",
-    "demand = pd.read_csv(\"half-hourly-demand.csv\")\n",
+    "demand = pd.read_csv(\"data/half-hourly-demand.csv\")\n",
     "\n",
     "demand = demand[demand[\"SETTLEMENT_PERIOD\"]%2 == 1]\n",
     "demand[\"hour\"] = demand[\"SETTLEMENT_PERIOD\"].apply(lambda x: int(x/2))\n",
