august data generation

--- a/fetch_data_and_clean.ipynb
+++ b/fetch_data_and_clean.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clean data"
+    "# Clean data and average"
    ]
   },
   {
@@ -78,6 +78,41 @@
     "\n",
     "a.to_excel(\"average energy demand from august to oct25.xlsx\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get August only data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# load the dataframes\n",
+    "prices = pd.read_csv(\"data/prices.csv\")\n",
+    "prices = prices[prices[\"recordType\"] == \"MAIN PRICE SUMMARY\"]\n",
+    "prices = prices[[\"local_datetime\", \"value\"]]\n",
+    "prices[\"local_datetime\"] = pd.to_datetime(prices[\"local_datetime\"], utc=True)\n",
+    "prices[\"local_datetime\"] = prices[\"local_datetime\"][prices[\"local_datetime\"].dt.month == 8]\n",
+    "prices[\"hour\"]= prices[\"local_datetime\"].apply(lambda x: x.hour)\n",
+    "a = prices.groupby([\"hour\"]).mean()\n",
+    "a.to_excel(\"data/average energy price of august.xlsx\")\n",
+    "\n",
+    "\n",
+    "demand = pd.read_csv(\"data/half-hourly-demand.csv\")\n",
+    "demand[\"local_datetime\"] = pd.to_datetime(demand[\"SETTLEMENT_DATE\"], utc=True)\n",
+    "demand[\"local_datetime\"] = demand[\"local_datetime\"][demand[\"local_datetime\"].dt.month == 8]\n",
+    "demand = demand[demand[\"SETTLEMENT_PERIOD\"]%2 == 1]\n",
+    "demand[\"hour\"] = demand[\"SETTLEMENT_PERIOD\"].apply(lambda x: int(x/2))\n",
+    "a = demand.groupby([\"hour\"]).mean()\n",
+    "a.to_excel(\"data/average energy demand for august.xlsx\")"
+   ]
   }
  ],
  "metadata": {
@@ -99,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
