README update and data source corrections

--- a/fetch_data_and_clean.ipynb
+++ b/fetch_data_and_clean.ipynb
@@ -50,14 +50,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           value\n",
+      "hour            \n",
+      "0     119.054424\n",
+      "1     111.653833\n",
+      "2     110.653881\n",
+      "3     104.004906\n",
+      "4     117.639172\n",
+      "5     116.294484\n",
+      "6     133.999658\n",
+      "7     148.676970\n",
+      "8     159.222840\n",
+      "9     173.804423\n",
+      "10    168.835216\n",
+      "11    152.680319\n",
+      "12    152.706402\n",
+      "13    148.545899\n",
+      "14    148.182152\n",
+      "15    131.522738\n",
+      "16    184.641363\n",
+      "17    213.218904\n",
+      "18    242.781162\n",
+      "19    189.254591\n",
+      "20    137.512033\n",
+      "21    130.969195\n",
+      "22    123.653921\n",
+      "23    131.656022\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
+    "import datetime\n",
     "\n",
     "# load the dataframes\n",
-    "prices = pd.read_csv(\"prices.csv\")\n",
+    "prices = pd.read_csv(\"data/prices.csv\")\n",
     "\n",
     "prices = prices[prices[\"recordType\"] == \"MAIN PRICE SUMMARY\"]\n",
     "prices = prices[[\"local_datetime\", \"value\"]]\n",
@@ -65,10 +99,11 @@
     "prices.to_excel(\"data/prices_filtered.xlsx\")\n",
     "\n",
     "prices[\"local_datetime\"] = pd.to_datetime(prices[\"local_datetime\"])\n",
-    "prices[\"hour\"]= prices[\"local_datetime\"].apply(lambda x: x.hour)\n",
+    "prices = prices[prices[\"local_datetime\"] <= datetime.datetime(2021, 10, 26, 0, 0, 0, 0, tzinfo=datetime.timezone.utc)]\n",
+    "prices[\"hour\"] = prices[\"local_datetime\"].apply(lambda x: x.hour)\n",
     "a = prices.groupby([\"hour\"]).mean()\n",
     "print(a)\n",
-    "a.to_excel(\"average energy price from august to november14.xlsx\")\n",
+    "a.to_excel(\"average energy price from august to oct25.xlsx\")\n",
     "\n",
     "demand = pd.read_csv(\"data/half-hourly-demand.csv\")\n",
     "\n",
